--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   
 
-  <div class="letter" id="openLetter"><img src="pic.png" width="150px" height="150px"></div>
+  <div class="letter" id="openLetter"><img src="pic.jpg" width="150px" height="150px"></div>
 
   <div class="audio-container">
     <audio controls>
