--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 </head>
 
 <body>
-  <div class="happy-birthday">Happy Birthday!</div>
+  <div class="happy-birthday">Happy <br/>Birthday!</div>
 
   
 
