--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     .cake-container {
       text-align: center;
-      margin-top: 20px;
+      margin-top: 300px;
     }
 
     .candle {
@@ -76,7 +76,7 @@
       background-color: #f9f9f9;
       border: 1px solid #ddd;
       padding: 20px;
-      margin: 20px;
+      margin-top: 300px;
       text-align: center;
       cursor: pointer;
       border-radius: 10px;
@@ -126,7 +126,7 @@
 
     .audio-container {
       text-align: center;
-      margin-top: 20px;
+      margin-bottom: 200px;
     }
 
     .happy-birthday {
@@ -162,15 +162,14 @@
 <body>
  
 
-  
-
   <div class="letter" id="openLetter"><img src="pic.jpg" width="150px" height="150px"></div>
 
   <div class="audio-container">
     <audio controls>
       <source src="hbd.mp3" type="audio/mpeg">
     </audio>
-     <div class="happy-birthday">Happy <br/>Birthday!</div>
+
+    <div class="happy-birthday">Happy <br/>Birthday!</div>
   </div>
 
 
@@ -194,7 +193,6 @@
     <div class="cake2"></div>
   </div>
   <script src="cake.js"></script>
-  
 </body>
 
 </html>
