--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <body>
  
 
-  <div class="letter" id="openLetter"><img src="pic.jpg" width="150px" height="150px"></div>
+  <div class="letter" id="openLetter"><img src="pic.PNG" width="150px" height="150px"></div>
 
   <div class="audio-container">
     <audio controls>
